// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`8. regression > bulbasaur full record 1`] = `
{
  "abilities": [
    "overgrow",
    "chlorophyll",
  ],
  "appears_in_games": [
    "red",
    "blue",
    "yellow",
    "gold",
    "silver",
    "crystal",
    "ruby",
    "sapphire",
    "emerald",
    "firered",
    "leafgreen",
    "diamond",
    "pearl",
    "platinum",
    "heartgold",
    "soulsilver",
    "black",
    "white",
    "black-2",
    "white-2",
    "x",
    "y",
    "omega-ruby",
    "alpha-sapphire",
    "sun",
    "moon",
    "ultra-sun",
    "ultra-moon",
    "lets-go-pikachu",
    "lets-go-eevee",
    "sword",
    "shield",
    "the-isle-of-armor-sword",
    "the-crown-tundra-sword",
    "brilliant-diamond",
    "shining-pearl",
    "legends-arceus",
    "scarlet",
    "violet",
    "the-teal-mask-scarlet",
    "the-indigo-disk-scarlet",
    "red-japan",
    "green-japan",
    "blue-japan",
    "legends-za",
    "mega-dimension",
  ],
  "base_experience": 64,
  "evolution": {
    "chain": [
      {
        "evolves_to": [
          "ivysaur",
        ],
        "name": "bulbasaur",
        "stage": 1,
        "trigger": null,
      },
      {
        "evolves_to": [
          "venusaur",
        ],
        "name": "ivysaur",
        "stage": 2,
        "trigger": "level up, level 16",
      },
      {
        "evolves_to": [],
        "name": "venusaur",
        "stage": 3,
        "trigger": "level up, level 32",
      },
    ],
    "evolves_from": null,
    "evolves_to": [
      "ivysaur",
    ],
    "is_fully_evolved": false,
    "is_legendary": false,
    "is_mythical": false,
    "stage": 1,
    "stage_label": "basic",
  },
  "first_seen_in_games": [
    "red",
    "blue",
    "yellow",
  ],
  "first_seen_label": "first seen in red, blue, yellow",
  "first_seen_source": "game_indices",
  "found": true,
  "generation": {
    "label": "part of generation 1",
    "name": "generation-i",
    "number": 1,
    "region": "kanto",
  },
  "height": 7,
  "id": 1,
  "name": "bulbasaur",
  "operation": "getPokemon",
  "sprite": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png",
  "stats": {
    "attack": 49,
    "defense": 49,
    "hp": 45,
    "special-attack": 65,
    "special-defense": 65,
    "speed": 45,
  },
  "types": [
    "grass",
    "poison",
  ],
  "weight": 69,
}
`;

exports[`8. regression > charmeleon full record (mid-evo with chain) 1`] = `
{
  "abilities": [
    "blaze",
    "solar-power",
  ],
  "appears_in_games": [
    "red",
    "blue",
    "yellow",
    "gold",
    "silver",
    "crystal",
    "ruby",
    "sapphire",
    "emerald",
    "firered",
    "leafgreen",
    "diamond",
    "pearl",
    "platinum",
    "heartgold",
    "soulsilver",
    "black",
    "white",
    "black-2",
    "white-2",
    "x",
    "y",
    "omega-ruby",
    "alpha-sapphire",
    "sun",
    "moon",
    "ultra-sun",
    "ultra-moon",
    "lets-go-pikachu",
    "lets-go-eevee",
    "sword",
    "shield",
    "the-isle-of-armor-sword",
    "the-crown-tundra-sword",
    "brilliant-diamond",
    "shining-pearl",
    "legends-arceus",
    "scarlet",
    "violet",
    "the-teal-mask-scarlet",
    "the-indigo-disk-scarlet",
    "red-japan",
    "green-japan",
    "blue-japan",
    "legends-za",
    "mega-dimension",
  ],
  "base_experience": 142,
  "evolution": {
    "chain": [
      {
        "evolves_to": [
          "charmeleon",
        ],
        "name": "charmander",
        "stage": 1,
        "trigger": null,
      },
      {
        "evolves_to": [
          "charizard",
        ],
        "name": "charmeleon",
        "stage": 2,
        "trigger": "level up, level 16",
      },
      {
        "evolves_to": [],
        "name": "charizard",
        "stage": 3,
        "trigger": "level up, level 36",
      },
    ],
    "evolves_from": "charmander",
    "evolves_to": [
      "charizard",
    ],
    "is_fully_evolved": false,
    "is_legendary": false,
    "is_mythical": false,
    "stage": 2,
    "stage_label": "middle",
  },
  "first_seen_in_games": [
    "red",
    "blue",
    "yellow",
  ],
  "first_seen_label": "first seen in red, blue, yellow",
  "first_seen_source": "game_indices",
  "found": true,
  "generation": {
    "label": "part of generation 1",
    "name": "generation-i",
    "number": 1,
    "region": "kanto",
  },
  "height": 11,
  "id": 5,
  "name": "charmeleon",
  "operation": "getPokemon",
  "sprite": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/5.png",
  "stats": {
    "attack": 64,
    "defense": 58,
    "hp": 58,
    "special-attack": 80,
    "special-defense": 65,
    "speed": 80,
  },
  "types": [
    "fire",
  ],
  "weight": 190,
}
`;

exports[`8. regression > generation 1 list (first 10) 1`] = `
{
  "count": 151,
  "found": true,
  "generation": 1,
  "generation_name": "generation-i",
  "limit": 10,
  "next": 10,
  "offset": 0,
  "operation": "listPokemon",
  "previous": null,
  "region": "kanto",
  "results": [
    {
      "id": 1,
      "name": "bulbasaur",
      "url": "https://pokeapi.co/api/v2/pokemon/bulbasaur",
    },
    {
      "id": 2,
      "name": "ivysaur",
      "url": "https://pokeapi.co/api/v2/pokemon/ivysaur",
    },
    {
      "id": 3,
      "name": "venusaur",
      "url": "https://pokeapi.co/api/v2/pokemon/venusaur",
    },
    {
      "id": 4,
      "name": "charmander",
      "url": "https://pokeapi.co/api/v2/pokemon/charmander",
    },
    {
      "id": 5,
      "name": "charmeleon",
      "url": "https://pokeapi.co/api/v2/pokemon/charmeleon",
    },
    {
      "id": 6,
      "name": "charizard",
      "url": "https://pokeapi.co/api/v2/pokemon/charizard",
    },
    {
      "id": 7,
      "name": "squirtle",
      "url": "https://pokeapi.co/api/v2/pokemon/squirtle",
    },
    {
      "id": 8,
      "name": "wartortle",
      "url": "https://pokeapi.co/api/v2/pokemon/wartortle",
    },
    {
      "id": 9,
      "name": "blastoise",
      "url": "https://pokeapi.co/api/v2/pokemon/blastoise",
    },
    {
      "id": 10,
      "name": "caterpie",
      "url": "https://pokeapi.co/api/v2/pokemon/caterpie",
    },
  ],
}
`;

exports[`8. regression > pikachu full record 1`] = `
{
  "abilities": [
    "static",
    "lightning-rod",
  ],
  "appears_in_games": [
    "red",
    "blue",
    "yellow",
    "gold",
    "silver",
    "crystal",
    "ruby",
    "sapphire",
    "emerald",
    "firered",
    "leafgreen",
    "diamond",
    "pearl",
    "platinum",
    "heartgold",
    "soulsilver",
    "black",
    "white",
    "black-2",
    "white-2",
    "x",
    "y",
    "omega-ruby",
    "alpha-sapphire",
    "sun",
    "moon",
    "ultra-sun",
    "ultra-moon",
    "lets-go-pikachu",
    "lets-go-eevee",
    "sword",
    "shield",
    "the-isle-of-armor-sword",
    "the-crown-tundra-sword",
    "brilliant-diamond",
    "shining-pearl",
    "legends-arceus",
    "scarlet",
    "violet",
    "the-teal-mask-scarlet",
    "the-indigo-disk-scarlet",
    "red-japan",
    "green-japan",
    "blue-japan",
    "legends-za",
    "mega-dimension",
  ],
  "base_experience": 112,
  "evolution": {
    "chain": [
      {
        "evolves_to": [
          "pikachu",
        ],
        "name": "pichu",
        "stage": 1,
        "trigger": null,
      },
      {
        "evolves_to": [
          "raichu",
        ],
        "name": "pikachu",
        "stage": 2,
        "trigger": "level up, happiness 220",
      },
      {
        "evolves_to": [],
        "name": "raichu",
        "stage": 3,
        "trigger": "use item, item: thunder-stone",
      },
    ],
    "evolves_from": "pichu",
    "evolves_to": [
      "raichu",
    ],
    "is_fully_evolved": false,
    "is_legendary": false,
    "is_mythical": false,
    "stage": 2,
    "stage_label": "middle",
  },
  "first_seen_in_games": [
    "red",
    "blue",
    "yellow",
  ],
  "first_seen_label": "first seen in red, blue, yellow",
  "first_seen_source": "game_indices",
  "found": true,
  "generation": {
    "label": "part of generation 1",
    "name": "generation-i",
    "number": 1,
    "region": "kanto",
  },
  "height": 4,
  "id": 25,
  "name": "pikachu",
  "operation": "getPokemon",
  "sprite": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png",
  "stats": {
    "attack": 55,
    "defense": 40,
    "hp": 35,
    "special-attack": 50,
    "special-defense": 50,
    "speed": 90,
  },
  "types": [
    "electric",
  ],
  "weight": 60,
}
`;
